--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -167,6 +167,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="Help",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
